package com.football.backend.models;

public enum CompetitionStrategy {
    KNOCKOUT,
    ROBIN_ROUND_DOUBLE,
    ROBIN_ROUND
}
